# gswitch

./: Cargo.toml  README.md
src/: config.rs  dotfile.rs  git.rs  main.rs  test_utils.rs
tests/: integration_tests.rs
tests/common/: mod.rs
